Correction des filtres. Correction des paramètres. Correction coloration. Mise en forme.

--- a/todo.txt
+++ b/todo.txt
@@ -1,9 +1,5 @@
-filtre coordonnées
-
-supporter plusieurs filtres
-{ "col1" : [val1,val2] }
-
-
+- suppression d'un filtre
+--> retirer la colonne du tabFilter
 
 - panneau config
 -- afficher points
