--- a/todo.txt
+++ b/todo.txt
@@ -1,2 +1,5 @@
 - suppression d'un filtre
 --> retirer la colonne du tabFilter
+
+- remplissage du select d'un filtre
+-- est-ce qu'il y a des doublons
